--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<h1>Header</h1>
 		</header>
 			<section id="content">
-				<canvas id="Minesweeper" data-processing-sources="Minesweeper.pde">
+				<canvas id="Minesweeper" data-processing-sources="Minesweeper.pde MouseFunctions.pde Buttons.pde">
 				</canvas>
 		    </section>
 	    <footer>
