--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 	</head>
 	<body>
 		<header>
-			<h1></h1>
+			<h1>Minesweeper Recreated</h1>
 		</header>
 			<section id="content">
 				<canvas id="Minesweeper" data-processing-sources="Minesweeper.pde MouseFunctions.pde Button.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    
+		Try not to blow up?    
 	    </footer>
 	</body>
 </html>
