--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Minesweeper</title>
+		<title></title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
@@ -16,7 +16,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		Try not to blow up?    
+		For custom settings, use the DELETE key (not backspace) to delete the last character    
 	    </footer>
 	</body>
 </html>
